tests/codegen/errors/reader/numeric-literals/atom.reader.error.reader.periodic.decimal.missing.close/reader-periodic-decimal-missing-close.mon
;; TEST-ID: tests.codegen.reader-error.reader-periodic-decimal-missing-close
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/numeric-literals
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected ')' to close periodic decimal repeating block
;; TEST-ATOM: atom.reader.error.reader.periodic.decimal.missing.close
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.periodic.decimal.missing.close
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected ')' to close periodic decimal repeating block
;; TEST-READER-PATH: reader.c:1595 lexer.periodic-decimal
;; TEST-CODEGEN-PATH: diagnostic.lexer.periodic-decimal
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:1595 Expected ')' to close periodic decimal repeating block
;; TEST-USES-ATOM: atom.reader.error.reader.periodic.decimal.missing.close
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.lexer.periodic.decimal
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/numeric-literals/atom.reader.error.reader.periodic.decimal.missing.close
;; TEST-MENU-PATH: codegen/errors/reader/numeric-literals/atom.reader.error.reader.periodic.decimal.missing.close
;; TEST-ATOM-LEAF: atom.reader.error.reader.periodic.decimal.missing.close
;; TEST-CLI-TARGET: codegen errors reader numeric-literals

(module Main)
(show 0.(3)
